--- a/bookbe/package.json
+++ b/bookbe/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
